<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Financial Management</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">:) welcome.</string>
    <string name="lets">let\'s get started!</string>
    <string name="loginButton">mainLoginButton</string>
    <string name="registerButton">mainRegisterButton</string>
    <string name="signupButton">SignupButton</string>
    <string name="cancelButton">cancelButton</string>
    <string name="crtacctButton">acctcreateButton</string>
    <string name="clickacct">Click account name to view history</string>
    <string name="accountsummary">Account Summary</string>
    <string name="spendingfor">Spending Report for</string>
    <string name="reportselect">Select a report you want to view.</string>
    <string name="spending">spending</string>
    <string name="cash">spending</string>
    <string name="income">spending</string>
    <string name="x">xButton</string>
    <string name="dollar">$</string>
    <string name="hint">0.00</string>
    <string name="graph">View Graph</string>
    <string name="dateeg">ex) 07141990</string>
    <string name="mealval">mealValue</string>
    <string name="groceryval">groceryValue</string>
    <string name="total">Total</string>
    <string name="totalval">totalValue</string>
    <string name="utility">Utility</string>
    <string name="utilityval">utilityValue</string>
    <string name="gasval">gasValue</string>
    <string name="shoppingval">shoppingValue</string>
    <string name="deposit">Deposit</string>
    <string name="expense">Expense</string>
    <string name="extra">ExtraBudget</string>
    <string name="salary">Salary</string>
    <string name="misc">misc</string>
    <string name="meal">Meal</string>
    <string name="bill">Bill</string>
    <string name="shop">Shop</string>
    <string name="shopping">Shopping</string>
    <string name="grocery">Grocery</string>
    <string name="gas">Gas</string>
    <string name="plus">+Button</string>
    <string name="id">User ID</string>
    <string name="pw">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="listview">Listview</string>
    <string name="report">ReportIcon</string>
    <string name="door">DoorIcon</string>
    <string name="date">DATE</string>
    <string name="update">update</string>
    <string name="daterange">Date Range :</string>
    <string name="startdate">Starting date</string>
    <string name="wave">~</string>
    <string name="enddate">Ending date</string>
    <string name="category">CATEGORY</string>
    <string name="amount">AMOUNT</string>
    <string name="logindetail">Enter your account details to Login</string>
    <string name="acctslist">Accounts List</string>
    <string name="acctname">ACCT NAME</string>
    <string name="inputacct">Account name :</string>
    <string name="agree">Agree</string>
    <string name="agreement">Use of this Android Application and creation of your user account signifies your agreement with the following terms of use. If you do not agree with any of these terms of use, please do not continue to create your user account. DDTC reserves the right, in its sole discretion, to modify these Terms of Use at any time and you agree to be bound by such modifications through your continued use of the DDTC\’s application after such time as the modifications are published.
 ACCURACY OF INFORMATION, TRADEMARKS, COPYRIGHTS &amp; RESTRICTIONS, LINKS, DISCLAIMERS, TERMINATION, JURISDICTION</string>
    <string name="balance">BALANCE</string>
    <string name="createtitle">Create an Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_deposit">DepositActivity</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_activity_spending">SpendingActivity</string>

</resources>