<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".SpendingActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spendingfor"
            android:textColor="#33A7FF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/reportuser"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/id"
            android:textColor="#33A7FF"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daterange"
            android:textColor="#828284"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/startingdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/startdate"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/thru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wave"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/endingdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enddate"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/spendupdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="#FFFFFF"
            android:contentDescription="@string/update"
            android:onClick="OnUpdateClick"
            android:src="@drawable/update" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/spendmeal"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/meal"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/spendmealvalue"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/mealval" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/spendgrocery"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/grocery"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/spendgroceryvalue"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/groceryval" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/spendingshopping"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/shopping"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/spendingshoppingvalue"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/shoppingval" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/spendinggas"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/gas"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/spendinggasvalue"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/gasval" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/spendingUtility"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/utility"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/spendingUtilityvalue"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/utilityval" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp" >

        <TextView
            android:id="@+id/spendingtotal"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="#FF0000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/spendingtotalvalue"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/totalval" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         android:layout_marginTop="32dp" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="OnGraphClick"
            android:text="@string/graph" />

        <ImageButton
            android:id="@+id/spendingX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:contentDescription="@string/x"
            android:onClick="OnXClick"
            android:src="@drawable/x" />

    </LinearLayout>

</LinearLayout>