<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccountActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/acctListtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acctslist"
            android:textColor="#33A7FF"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:onClick="OnReportClick"
            android:background="#ffffff"
            android:contentDescription="@string/report"
            android:src="@drawable/report" />

        <ImageButton
            android:id="@+id/door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:onClick="OnDoorClick"
            android:background="#ffffff"
            android:contentDescription="@string/door"
            android:src="@drawable/door" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/acctNametxt"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/acctname"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/balancetxt"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/balance"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="250dp" >

        <ListView
            android:id="@+id/acct_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ListView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
            <TextView
            android:id="@+id/acctclicktxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/clickacct"
            android:textColor="#33A7FF"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/crtacct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#ffffff"
            android:contentDescription="@string/crtacctButton"
            android:onClick="OnCreateClick"
            android:src="@drawable/createacct" />

    </LinearLayout>

</LinearLayout>