<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/CreateTitle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/createtitle"
            android:textColor="#33A7FF"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/inputaccttxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:text="@string/inputacct"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#33A7FF" />

        <EditText
            android:id="@+id/acctEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:inputType="text" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="170dp" >

        <TextView
            android:id="@+id/agreementText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/agreement" >
        </TextView>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/agreeCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/agree"
            android:textColor="#33A7FF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin" >

        <ImageButton
            android:id="@+id/createnewacct"
            android:contentDescription="@string/crtacctButton"
            android:onClick="OnCreateClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="#ffffff"
            android:src="@drawable/createacct" />

        <ImageButton
            android:id="@+id/cancelcreate"
            android:contentDescription="@string/cancelButton"
            android:onClick="OnCancelClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:src="@drawable/cencel" />

    </LinearLayout>

</LinearLayout>