<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HistoryActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/HistAcctView"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:textColor="#a6bc29"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/HistX"
            android:onClick="OnXClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:contentDescription="@string/x"
            android:src="@drawable/x" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/histdate"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/histcategory"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/histamount"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/histList"
            android:layout_width="match_parent"
            android:layout_height="258dp"
            android:layout_marginBottom="5dp" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/histplus"
            android:onClick="OnPlusClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:contentDescription="@string/plus"
            android:src="@drawable/plus" />
    </LinearLayout>

</LinearLayout>