<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/maintxtlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/welcomeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="#a6bc29"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/letsTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lets"
            android:textColor="#a6bc29"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainbuttonlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/loginButton"
            android:contentDescription="@string/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:onClick="onLoginClick"
            android:src="@drawable/login" />

        <ImageButton
            android:id="@+id/RegisterButton"
            android:contentDescription="@string/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#ffffff"
            android:onClick="onRegClick"
            android:src="@drawable/register" />
        
    </LinearLayout>

</LinearLayout>