<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/logintxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="49dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#33A7FF"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/logindetailtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:text="@string/logindetail"
            android:textColor="#33A7FF"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp" >

        <TextView
            android:id="@+id/usernametxt"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:text="@string/id"
            android:textColor="#33A7FF"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/loginID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
         <TextView
             android:id="@+id/passwordtxt"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:gravity="left|center"
             android:text="@string/pw"
             android:textColor="#33A7FF"
             android:textSize="15sp" />

        <EditText
            android:id="@+id/loginPW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/loginloginbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:background="#ffffff"
            android:contentDescription="@string/loginButton"
            android:onClick="onLoginClick"
            android:src="@drawable/loginbtn" />

    </LinearLayout>

</LinearLayout>